Adicionado controles ao slide

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +7,28 @@
     <title>SlideShow - JavaScript</title>
 </head>
 <body>
+    <header>
+        <div class="header">
+
+        </div>
+        <div class="slider">
+            <div class="slider--controls">
+                <div class="slider--control" onclick="goPrev()">Voltar</div>
+                <div class="slider--control" onclick="goNext()">Avançar</div>
+            </div>
+            <div class="slider--width">
+                <div class="slider--item" style="background-image: url(images/1.jpg);"></div>
+                <div class="slider--item" style="background-image: url(images/2.jpeg);"></div>
+                <div class="slider--item" style="background-image: url(images/3.jpeg);"></div>
+                
+            </div>
+        </div>
+    </header>
+    <section>
+        <div class="corpo">
+            RESTANTE DO SITE
+        </div>
+    </section>
     <script src="script.js"></script>
 </body>
 </html>
