final do Slider

--- a/index.html
+++ b/index.html
@@ -13,13 +13,19 @@
         </div>
         <div class="slider">
             <div class="slider--controls">
-                <div class="slider--control" onclick="goPrev()">Voltar</div>
-                <div class="slider--control" onclick="goNext()">Avançar</div>
+                <div class="slider--control" onclick="goPrev()"></div>
+                <div class="slider--control" onclick="goNext()"></div>
             </div>
             <div class="slider--width">
-                <div class="slider--item" style="background-image: url(images/1.jpg);"></div>
-                <div class="slider--item" style="background-image: url(images/2.jpeg);"></div>
-                <div class="slider--item" style="background-image: url(images/3.jpeg);"></div>
+                <div class="slider--item" style="background-image: url(images/1.jpg);">
+                    VIVA COM ALEGRIA
+                </div>
+                <div class="slider--item" style="background-image: url(images/2.jpeg);">
+                    VIVA COM SAÚDE
+                </div>
+                <div class="slider--item" style="background-image: url(images/3.jpeg);">
+                    VIVA COM INTELIGÊNCIA
+                </div>
                 
             </div>
         </div>
